--- a/lang/en.json
+++ b/lang/en.json
@@ -1,3 +1,3 @@
 {
-   "lead": "This app allows users to identify traditional Quebec and Irish tunes and retrieve their sheet music. It is heavily inspired by the work of Tom Willy",
+   "lead": "This app allows users to identify traditional Quebec and Irish tunes and retrieve their sheet music. It is heavily inspired by the work of Tom Willy"
 }
