Completed the locale files

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,3 +1,31 @@
 {
-   "lead": "This app allows users to identify traditional Quebec and Irish tunes and retrieve their sheet music. It is heavily inspired by the work of Tom Willy"
+   "title": "Tradify",
+   "noscript": "Javascript must be enabled in your browser for this page to work properly. Please activate it and reload the page.",
+   "about": "About",
+   "lead": "This app allows users to identify traditional Quebec and Irish tunes and retrieve their sheet music. It is heavily inspired by the work of Tom Willy (<a href=\"https://folkfriend.app/\\" target=\"_blank\">FolkFriend</a>).",
+   "links": "Useful links",
+   "followLink": "Visit page",
+   "repositoryTitle": "Github Repository",
+   "repositoryDescription": "A repository for quebecois and irish sheet music.",
+   "folksetTitle": "Folkset",
+   "folksetDescription": "The Github repository for a partition reader project for Android devices.",
+   "musescoreTitle": "Musescore",
+   "musescoreDescription": "An application that allows you to format your sheet music.",
+   "folkFriendTitle": "FolkFriend",
+   "folkFriendDescription": "FolkFriend listens to your music and searches for matches in The Session database.",
+   "thesessionTitle": "The Session",
+   "thesessionDescription": "A repository of sheet music for traditional Irish music.",
+   "montrealsessionTitle": "Montreal Session",
+   "montrealsessionDescription": "A repository of sheet music for traditional Irish music in Montreal.",
+   "vitrifolkTitle": "Vitrifolk",
+   "vitrifolkDescription": "A repository of sheet music for traditional Canadian music.",
+   "familleremonTitle": "Famille Remon",
+   "familleremonDescription": "The Remon family's collection of sheet music.",
+   "leviolondejosTitle": "Le violon de Jos",
+   "leviolondejosDescription": "A repository of sheet music for traditional Quebec music.",
+   "tunearchTitle": "Tune Arch",
+   "tunearchDescription": "A repository of sheet music for traditional music.",
+   "folktunefinderTitle": "Folk Tune Finder",
+   "folktunefinderDescription": "A repository of sheet music for traditional music.",
+   "footer": "Adapté du travail de Tom Wyllie (<a href=\"https://folkfriend.app/\\" target=\"_blank\">FolkFriend</a>) par Ludovic A.-Lussier."
 }
