--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,3 +1,31 @@
 {
-   "lead": "Cette application permet d'identifier des pièces de musique traditionnelles québécoises et irlandaises et d'en récupérer les partitions. Elle est fortement inspirée du travail de Tom Willy"
+   "title": "Tradify",
+   "noscript": "Javascript doit être activé votre navigateur pour que cette page fonctionne correctement. Veuillez l'activer et recharger la page.",
+   "about": "À propos",
+   "lead": "Cette application permet d'identifier des pièces de musique traditionnelles québécoises et irlandaises et d'en récupérer les partitions. Elle est fortement inspirée du travail de Tom Willy (<a href=\"https://folkfriend.app/\\" target=\"_blank\">FolkFriend</a>).",
+   "links": "Liens utiles",
+   "followLink": "Y aller",
+   "repositoryTitle": "Dépôt Github",
+   "repositoryDescription": "Un dépôt de partitions trad québécoises et irlandaises.",
+   "folksetTitle": "Folkset",
+   "folksetDescription": "Le dépôt Github d'un projet de liseuse de partitions pour appareils Android.",
+   "musescoreTitle": "Musescore",
+   "musescoreDescription": "Une application permettant de mettre en page vos partitions.",
+   "folkFriendTitle": "FolkFriend",
+   "folkFriendDescription": "FolkFriend écoute votre musique et cherche des correspondances dans la base de données de The Session.",
+   "thesessionTitle": "The Session",
+   "thesessionDescription": "Un dépôt de partitions pour la musique traditionnelle irlandaise.",
+   "montrealsessionTitle": "Montreal Session",
+   "montrealsessionDescription": "Un dépôt de partitions pour la musique traditionnelle irlandaise à Montréal.",
+   "vitrifolkTitle": "Vitrifolk",
+   "vitrifolkDescription": "Un dépôt de partitions pour la musique traditionnelle canadienne.",
+   "familleremonTitle": "Famille Remon",
+   "familleremonDescription": "Le dépôt de partitions de la famille Remon.",
+   "leviolondejosTitle": "Le violon de Jos",
+   "leviolondejosDescription": "Un dépôt de partitions pour la musique traditionnelle québécoise.",
+   "tunearchTitle": "Tune Arch",
+   "tunearchDescription": "Un dépôt de partitions pour la musique traditionnelle.",
+   "folktunefinderTitle": "Folk Tune Finder",
+   "folktunefinderDescription": "Un dépôt de partitions pour la musique traditionnelle.",
+   "footer": "Adapté du travail de Tom Wyllie (<a href=\"https://folkfriend.app/\\" target=\"_blank\">FolkFriend</a>) par Ludovic A.-Lussier."
 }
