--- a/lang/fr.json
+++ b/lang/fr.json
@@ -3,6 +3,7 @@
    "noscript": "Javascript doit être activé votre navigateur pour que cette page fonctionne correctement. Veuillez l'activer et recharger la page.",
    "about": "À propos",
    "lead": "Cette application permet d'identifier des pièces de musique traditionnelles québécoises et irlandaises et d'en récupérer les partitions. Elle est fortement inspirée du travail de Tom Willy (FolkFriend).",
+   "download": "Télécharger les partitions au format ZIP",
    "links": "Liens utiles",
    "followLink": "Y aller",
    "repositoryTitle": "Dépôt Github",
