--- a/lang/fr.json
+++ b/lang/fr.json
@@ -32,7 +32,7 @@
    "Rank": "Rang",
    "Title": "Titre",
    "Score": "Score",
-   "insufficentDataForAnalysis": "Les données enregistrées sont insuffisantes pour poursuivre avec l'analyse.",
-   "insufficentDataForSearch": "Les données enregistrées sont insuffisantes pour poursuivre avec la recherche.",
+   "insufficentDataForAnalysis": "Les données enregistrées sont insuffisantes pour poursuivre avec l'analyse. Vous jouez peut-être votre musique trop doucement.",
+   "insufficentDataForSearch": "Les données enregistrées sont insuffisantes pour poursuivre avec la recherche. Vous jouez peut-être votre musique trop doucement.",
    "zeroResult": "0 résultat. Essayez de nouveau!"
 }
