--- a/lang/en.json
+++ b/lang/en.json
@@ -32,6 +32,7 @@
    "Rank": "Rank",
    "Title": "Title",
    "Score": "Score",
+   "userMediaNotSupported": "Your browser does not support this application. Please change browser.",
    "insufficentDataForAnalysis": "The recorded data is insufficent to proceed further with analysis. You may be playing your music too softly.",
    "insufficentDataForSearch": "The recorded data is insufficent to proceed further with the search. You may be playing your music too softly.",
    "zeroResult": "0 result. Try again!"
