--- a/lang/en.json
+++ b/lang/en.json
@@ -35,5 +35,6 @@
    "userMediaNotSupported": "Your browser does not support this application. Please change browser.",
    "insufficentDataForAnalysis": "The recorded data is insufficent to proceed further with analysis. You may be playing your music too softly.",
    "insufficentDataForSearch": "The recorded data is insufficent to proceed further with the search. You may be playing your music too softly.",
-   "zeroResult": "0 result. Try again!"
+   "zeroResult": "0 result. Try again!",
+   "buymeacoffee": "Buy me a coffee"
 }
