--- a/lang/fr.json
+++ b/lang/fr.json
@@ -35,5 +35,6 @@
    "userMediaNotSupported": "Votre navigateur n'a pas les fonctionnalités requises. Veuillez changer de navigateur.",
    "insufficentDataForAnalysis": "Les données enregistrées sont insuffisantes pour poursuivre avec l'analyse. Vous jouez peut-être votre musique trop doucement.",
    "insufficentDataForSearch": "Les données enregistrées sont insuffisantes pour poursuivre avec la recherche. Vous jouez peut-être votre musique trop doucement.",
-   "zeroResult": "0 résultat. Essayez de nouveau!"
+   "zeroResult": "0 résultat. Essayez de nouveau!",
+   "buymeacoffee": "Achetez-moi un café"
 }
