Adjusted wording to reflect that some link lead to my stuff

--- a/lang/en.json
+++ b/lang/en.json
@@ -7,9 +7,9 @@
    "links": "Useful links",
    "followLink": "Visit page",
    "repositoryTitle": "Github Repository",
-   "repositoryDescription": "A repository for Quebec and irish sheet music.",
+   "repositoryDescription": "My repository for Quebec and irish sheet music.",
    "folksetTitle": "Folkset",
-   "folksetDescription": "The Github repository for a partition reader project for Android devices.",
+   "folksetDescription": "The Github repository for my sheet music reader project for Android devices.",
    "musescoreTitle": "Musescore",
    "musescoreDescription": "An application that allows you to format your sheet music.",
    "folkFriendTitle": "FolkFriend",
