--- a/lang/fr.json
+++ b/lang/fr.json
@@ -7,9 +7,9 @@
    "links": "Liens utiles",
    "followLink": "Y aller",
    "repositoryTitle": "Dépôt Github",
-   "repositoryDescription": "Un dépôt de partitions trad québécoises et irlandaises.",
+   "repositoryDescription": "Mon dépôt de partitions trad québécoises et irlandaises.",
    "folksetTitle": "Folkset",
-   "folksetDescription": "Le dépôt Github d'un projet de liseuse de partitions pour appareils Android.",
+   "folksetDescription": "Le dépôt Github de mon projet de liseuse de partitions pour appareils Android.",
    "musescoreTitle": "Musescore",
    "musescoreDescription": "Une application permettant de mettre en page vos partitions.",
    "folkFriendTitle": "FolkFriend",
