Added a way to import wav files, but it remains hidden

--- a/lang/en.json
+++ b/lang/en.json
@@ -28,6 +28,9 @@
    "tunearchDescription": "A repository of sheet music for traditional music.",
    "folktunefinderTitle": "Folk Tune Finder",
    "folktunefinderDescription": "A repository of sheet music for traditional music.",
+   "importWav": "Import a Wav",
+   "tooManyImportedFiles": "Please select only 1 file.",
+   "notAWav": "Please select a file of type Wav.",
    "footer": "Adapted from the work of Tom Wyllie (FolkFriend) by Ludovic A.-Lussier.",
    "Rank": "Rank",
    "Title": "Title",
