--- a/lang/fr.json
+++ b/lang/fr.json
@@ -28,6 +28,9 @@
    "tunearchDescription": "Un dépôt de partitions pour la musique traditionnelle.",
    "folktunefinderTitle": "Folk Tune Finder",
    "folktunefinderDescription": "Un dépôt de partitions pour la musique traditionnelle.",
+   "importWav": "Importez un Wav",
+   "tooManyImportedFiles": "Veuillez sélectionner un seul fichier.",
+   "notAWav": "Veuillez sélectionner un fichier de type WAV.",
    "footer": "Adapté du travail de Tom Wyllie (FolkFriend) par Ludovic A.-Lussier.",
    "Rank": "Rang",
    "Title": "Titre",
