Added a translation for the 'feedback' key

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -4,6 +4,7 @@
    "about": "À propos",
    "lead": "Cette application permet d'identifier des pièces de musique traditionnelles québécoises et irlandaises et d'en récupérer les partitions. Elle est fortement inspirée du travail de Tom Willy (FolkFriend).",
    "download": "Télécharger les partitions au format ZIP",
+   "feedback": "Communiquer avec Tradify",
    "links": "Liens utiles",
    "followLink": "Y aller",
    "repositoryTitle": "Dépôt Github",
