Added the translation files to the cache

--- a/lang/en.json
+++ b/lang/en.json
@@ -4,6 +4,7 @@
    "about": "About",
    "lead": "This app allows users to identify traditional Quebec and Irish tunes and retrieve their sheet music. It is heavily inspired by the work of Tom Willy (FolkFriend).",
    "download": "Download the sheet music in ZIP format",
+   "install": "Install this app",
    "feedback": "Send feedback",
    "links": "Useful links",
    "followLink": "Visit page",
