--- a/lang/fr.json
+++ b/lang/fr.json
@@ -40,6 +40,11 @@
    "userMediaNotSupported": "Votre navigateur n'a pas les fonctionnalités requises. Veuillez changer de navigateur.",
    "insufficentDataForAnalysis": "Les données enregistrées sont insuffisantes pour poursuivre avec l'analyse. Vous jouez peut-être votre musique trop doucement.",
    "insufficentDataForSearch": "Les données enregistrées sont insuffisantes pour poursuivre avec la recherche. Vous jouez peut-être votre musique trop doucement.",
+   "insufficentSpectogramRange": "Une erreur interne est survenue (code d'erreur T1).",
+   "invalidX1X2": "Une erreur interne est survenue (code d'erreur T2).",
+   "emptyLattice": "Une erreur interne est survenue (code d'erreur T3).",
+   "quantisationError": "Une erreur interne est survenue (code d'erreur T4).",
+   "cannotDecodeSilence": "Impossible de décoder un silence complet!",
    "zeroResult": "0 résultat. Essayez de nouveau!",
    "offline": "Vous devez être connecté à Internet pour accéder à ce lien.",
    "buymeacoffee": "Achetez-moi un café"
