Correction of a typo in Tom Wyllie's name. Tom Wyllie is the creator of Folkfriend, which is the foundation of this project.

--- a/lang/en.json
+++ b/lang/en.json
@@ -2,7 +2,7 @@
    "title": "Tradify",
    "noscript": "Javascript must be enabled in your browser for this page to work properly. Please activate it and reload the page.",
    "about": "About",
-   "lead": "This app allows users to identify traditional Quebec and Irish tunes and retrieve their sheet music. It is heavily inspired by the work of Tom Willy (FolkFriend).",
+   "lead": "This app allows users to identify traditional Quebec and Irish tunes and retrieve their sheet music. It is heavily inspired by the work of Tom Wyllie (FolkFriend).",
    "download": "Download the sheet music in ZIP format",
    "install": "Install this app",
    "feedback": "Send feedback",
